<resources>
    <string name="app_name">MijnParkController</string>

    <string name="lbl_groupname">Groepsnaam</string>
    <string name="lbl_groupowner">Groepsleider</string>
    <string name="lbl_userrequests">Aantal aanvragen</string>
    <string name="lbl_ingroup">In groep</string>
    <string name="lbl_inteam">In team</string>

    <string name="missing_username_message">Gebruikersnaam moet ingevuld zijn</string>
    <string name="missing_groupowner_message">Groepsleider moet ingevuld zijn</string>
    <string name="missing_groupname_message">Groepsnaam moet ingevuld zijn</string>
    <string name="misc_error_message">Er is iets misgegaan</string>
    <string name="empty_group_message">Er moet minstens één persoon in de groep zitten</string>
    <string name="users_in_init_team_message">Alle groepsleden moeten in een team zijn ingedeeld</string>


    <string name="confirm_group_title">Groep aanmaken voltooien</string>
    <string name="confirm_team_title">Team aanmaken voltooien</string>
    <string name="confirm_message">Wilt u verder gaan?</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Ja</string>
    <string name="dialog_button_no">Nee</string>
    <string name="dialog_button_continue">Doorgaan</string>
    <string name="dialog_button_cancel">Annuleren</string>
    <string name="lbl_team">Team:</string>

    <string name="status_joining_group">Indelen in groep…</string>
    <string name="status_joining_team">Indelen in team…</string>
    <string name="status_joined_group">Ingedeeld in groep</string>
    <string name="points">punten</string>
</resources>
